# Asteroid_V3

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.example.yaml  launch_app.py  mise.toml  pyproject.toml  renovate.json
.agents/: README.md
.github/workflows/: lint-typecheck-test.yml  propose-dev-merge.yml
app/: __init__.py  main.py  pyproject.toml
app/common/: command_groups.py  constants.py  discord_types.py  error_reporting.py  guild_scope.py  interaction_errors.py  layout_pages.py  offline.py  pages.py  permissions.py  persistent_panels.py  utils.py
app/core/: bot.py  config.py  extensions.py  logging.py  system_commands.py
app/database/: compat.py  manager.py  migrations_check.py  session.py  table_utils.py
scripts/: v2_to_v3_migration.py
tests/: README.md  conftest.py  test_action_power.py  test_auth_panel.py  test_birthday_cog.py  test_bot_shutdown.py  test_command_argument_names.py  test_command_groups.py  test_command_permissions.py  test_config.py  test_database_indexes.py  test_database_migrations_check.py  test_database_model_defaults.py  test_database_session.py  test_extensions.py  test_free_category_panel.py  test_guild_scope.py  test_launch_app.py  test_layout_pages.py  test_leveling_cog.py  test_leveling_components_v2.py  test_leveling_hotness_repository.py  test_leveling_monthly.py  test_leveling_power_display.py  test_leveling_repository.py  test_leveling_service.py  test_log_error.py  test_math_calculation.py  test_moderation_service.py  test_offline.py  test_pages.py  test_persistent_panels.py  test_punish_cog.py  test_ranking_board_panel.py  test_report_cog.py  test_report_service.py  test_rolepanel_panel.py  test_rolepanel_repository.py  test_rolepanel_service.py  test_roles_service.py  (+5 more)
tests/common/: __init__.py  test_command_groups.py  test_guild_scope.py  (+4 more)
tests_archive/: test_action_power.py  test_auth_panel.py  test_command_groups.py  test_command_permissions.py  test_config.py  test_database_migrations_check.py  test_database_session.py  test_guild_scope.py  test_launch_app.py  test_layout_pages.py  test_leveling_hotness_repository.py  test_leveling_power_display.py  test_leveling_repository.py  test_leveling_service.py  test_log_error.py  test_math_calculation.py  test_offline.py  test_pages.py  test_persistent_panels.py  test_report_cog.py  test_report_service.py  test_rolepanel_repository.py  test_rolepanel_runtime.py  test_starboard_setup.py  test_ui_authorization.py  test_utils.py  test_v2_to_v3_migration.py
(+176 files in other folders)
