[project]
name = "asteroid-v3"
version = "0.1.0"
description = "Discordサーバー『ナメック星』にて使用する専属BOT（3代目）"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.12.0",
    "aiomysql>=0.2.0",
    "alembic>=1.18.4",
    "captcha>=0.7.1",
    "cryptography>=46.0.6",
    "discord-py>=2.7.1",
    "greenlet>=3.2.4",
    "pillow>=11.0.0",
    "pydantic>=2.12.5",
    "pytimeparse>=1.1.8",
    "ruamel-yaml>=0.19.1",
    "sqlalchemy>=2.0.41",
]

[tool.ruff]
# 1行の最大文字数
# GitHubのコードレビュー幅が119文字らしい
line-length = 119

[tool.ruff.lint]
# チェックするエラーの種類
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "pyright>=1.1.410",
]
