[project]
name = "asteroid-v3"
version = "0.1.0"
description = "Discordサーバー『ナメック星』にて使用する専属BOT（3代目）"
readme = "README.md"
requires-python = ">=3.14.6"
dependencies = [
    "aiohttp>=3.14.1",
    "aiomysql>=0.3.2",
    "alembic>=1.18.5",
    "captcha>=0.7.1",
    "cryptography>=49.0.0",
    "discord-py>=2.7.1",
    "greenlet>=3.5.3",
    "pillow>=11.3.0",
    "pydantic>=2.13.4",
    "ruamel-yaml>=0.19.1",
    "sqlalchemy>=2.0.51",
]

[tool.ruff]
# 1行の最大文字数
# GitHubのコードレビュー幅が119文字らしい
line-length = 119

[tool.ruff.lint]
# チェックするエラーの種類
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.4.0",
    "pyright>=1.1.411",
]
